<resources>
    <string name="app_name">Nama Pet Shop</string>
    <string name="email" >Email</string>
    <string name="password"> Password</string>
    <string name="layanan" >Layanan</string>
    <string name="tarif" >Tarif</string>
    <string name="durasi" >Durasi</string>
    <string name="rambut" >Rambut</string>
    <string name="berat">Berat</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>