<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="lyn"
            type="com.naldonatanael.project_uts.Layanan"/>
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        tools:context=".RecyclerViewAdapter"
        android:id="@+id/ParentAdapter">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:id="@+id/ivFotoProfil"
                    app:profileImages="@{lyn.imgURL}">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/layanan"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvLayanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{lyn.namaLayanan}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rambut"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvRambut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{lyn.rambut}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/berat"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvBerat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{lyn.berat}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/durasi"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvDurasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{lyn.durasi}"
                        android:textSize="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="Tarif"
                        android:textSize="14dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvTarif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="@{String.valueOf(lyn.tarif)}"
                        android:textSize="12dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>